name:                jsonParser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/NewMountain/jsonParser#readme
license:             BSD3
license-file:        LICENSE
author:              Christoher Nyberg
maintainer:          christopher.nyberg@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
                     , ghc-mod
                     , hlint
                     , hindent
                     , parsec
                     , text
  default-language:    Haskell2010

executable jsonParser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jsonParser
  default-language:    Haskell2010

test-suite jsonParser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jsonParser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NewMountain/jsonParser
